Added flattr Button

--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
       right: 5px;
       text-align: right;
     }
+
+    img { vertical-align: middle; }
   </style>
 </head>
 <body>
@@ -166,6 +168,7 @@
 </script>
 <div id="prison"></div>
 <footer><a href="http://www.introversion.co.uk/prisonarchitect/">Prison Architect is owned by Introversion Software</a><br />
-Coding by maweki // <a href="https://twitter.com/maweki1">twitter @maweki1</a> // <a href="https://github.com/maweki/pa-tunnelfinder">github</a></footer>
+Coding by maweki // <a href="https://twitter.com/maweki1">twitter @maweki1</a> // <a href="https://github.com/maweki/pa-tunnelfinder">github</a> //
+<a href="https://flattr.com/submit/auto?user_id=maweki&url=http%3A%2F%2Fmaweki.de%2Fpa-tunnelfinder" target="_blank"><img src="//button.flattr.com/flattr-badge-large.png" alt="Flattr this" title="Flattr this" border="0"></a></footer>
 </body>
 </html>
